<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/mainContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ipv4LabelTextView"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:layout_weight="1" />
                    <EditText
                        android:id="@+id/ipv4EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="3"
                        android:hint="@string/ipv4HintExample"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/portNumberLabelTextView"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:layout_weight="1" />
                    <EditText
                        android:id="@+id/portNumberEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:layout_weight="3"
                        android:hint="@string/portNumberHintExample"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <Button
                    android:id="@+id/connectButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectButtonConnectedText"
                    android:textSize="30sp"
                    android:background="@drawable/radius_button_1"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    android:textColor="@color/nice_blue"
                    android:text="Wifi Status: "/>
                <TextView
                    android:id="@+id/wifiStatusTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
                <Button
                    android:id="@+id/startOpenGLButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:background="@drawable/radius_button_1"
                    android:text="@string/view_opengl"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/loginHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/loginHistoryText"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/commandHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/commandHistoryText"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/KnownHostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/knownButtonText"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/knownHostLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="5"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/container"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
            </FrameLayout>

        </LinearLayout>
        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>